@@ -32,6 +32,7 @@ Add function ConvertTo-GitHubGoCredentials to convert an auth context hashtable 
 Add parameter deviceCode to New-BcAuthContext to allow initiating the device code flow in one call and finish in another
 Add function Import-CertificateToBcContainer to import a .cer certificate to the container
 Add support for URLs in Import-PfxCertificateToBcContainer and Import-CertificateToBcContainer
+Add KeyVault access parameters to Run-AlPipeline
 
 2.0.15
 Default to process isolation when Host OS is 21H1 and Container OS is 2004
